--- a/PAGES/4c_forLoops/index.html
+++ b/PAGES/4c_forLoops/index.html
@@ -480,7 +480,7 @@ section a:hover{
                 <h2> LINKS TO SECTIONS </h2>
             </div>
                 <div class="modal-body">
-                    To quickly share a link that goes to a specific section, hover over the title and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
+                    To quickly share a link to a specific section, simply hover over the title and click on it. The link will be automatically copied to your clipboard, ready to be pasted.
                 <span class="brmine"></span>
             </div>
             <div class="modal-header">
@@ -2944,7 +2944,7 @@ y      &#61; &#91;foo&#40;a&#41; for a in x&#93;          # or y &#61; &#91;foo&
         <h2>Multiple Iterations</h2></p>
 <p>Thus far, we&#39;ve considered for-loops that iterate over single values. We now extend the applications of for-loops to <strong>iterate over multiple values</strong>. In particular, we consider simultaneous iterations over two lists and iterations over indices and values of a vector. </p>
  <h4> Iterating over Two Lists </h4>
-<p>Depending on the combination of elements aimed, there are two ways to simultaneously iterate over two lists <code>x</code> and <code>y</code>. If you seek to iterate over all the possible combinations of their elements, you need the function <code>Iterators.product&#40;x,y&#41;</code>, where the package <code>Iterators</code> is &quot;imported&quot; by default in each Julia session.</p>
+<p>Depending on the combination of elements aimed, there are two ways to simultaneously iterate over two lists <code>x</code> and <code>y</code>. First, if you seek to iterate over all the possible combinations of their elements, you need the function <code>Iterators.product&#40;x,y&#41;</code>, where the package <code>Iterators</code> is &quot;imported&quot; by default in each Julia session.</p>
 <p>Alternatively, you can iterate over all the ordered pairs of <code>x</code> and <code>y</code>, where each iteration considers the  <em>i</em>-th element of <code>x</code> and <code>y</code>. This operation requires the function <code>zip&#40;x,y&#41;</code>. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
@@ -2977,7 +2977,7 @@ end</code></pre>
 [2,4]</div></div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Array comprehensions provide another way to iterate over multiple values. In particular, to generate all possible combinations of two lists, you can use multiple <code>for</code> clauses in the comprehension. Alternatively, you can use the <code>zip</code> function to iterate over pairs of elements from the lists.</p>
+<p>Array comprehensions provide another way to iterate over multiple values. In particular, by using multiple <code>for</code> clauses in the comprehension, it&#39;s possible to generate all possible combinations of two lists. Alternatively, the <code>zip</code> function enables you to iterate over pairs of elements.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -3039,7 +3039,7 @@ y &#61; &#91;index * value for &#40;index,value&#41; in enumerate&#40;x&#41;&#93
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Iterating over Functions</h2><a id="iterate_functions" class="anchor"></a></p>
-<p>Functions in Julia are <span style="color: rgb(62, 121, 180);"><strong>first-class objects</strong></span>. This means that they can be manipulated in a similar way as other primitive objects, such as strings and numbers. In particular, we can define a vector of functions and iterate over them. In the following example, we illustrate its use by providing descriptive statics for a vector <code>x</code>.</p>
+<p>Functions in Julia are <span style="color: rgb(62, 121, 180);"><strong>first-class objects</strong></span>. This means that they can be manipulated similarly to other fundamental data types, such as strings and numbers. This feature allows us todefine a vector of functions and apply each of them to an object. In the following example, we illustrate this particularly use by providing descriptive statics for a vector <code>x</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">using Statistics    # loaded to access the function &#96;mean&#96; and &#96;median&#96;
 
@@ -3074,7 +3074,7 @@ descriptive&#40;vector,list&#41; &#61; &#91;foo&#40;vector&#41; for foo in list&
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 10, 2024 
+          © Martin Alfaro <br>Last Modified September 11, 2024 
       </span> 
   </div> 
 </footer>
