--- a/PAGES/5a_immutables/index.html
+++ b/PAGES/5a_immutables/index.html
@@ -480,7 +480,7 @@ section a:hover{
                 <h2> LINKS TO SECTIONS </h2>
             </div>
                 <div class="modal-body">
-                    To quickly share a link that goes to a specific section, hover over the title and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
+                    To quickly share a link to a specific section, simply hover over the title and click on it. The link will be automatically copied to your clipboard, ready to be pasted.
                 <span class="brmine"></span>
             </div>
             <div class="modal-header">
@@ -2595,7 +2595,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Defining Mutability</h2></p>
-<p>In programming, objects can be broadly classified into two categories: mutable and immutable. <span style="color: rgb(62, 121, 180);"><strong>Mutable objects</strong></span> are designed to be flexible, allowing their constituting elements to be modified, appended, or removed at will. A prime example of mutable objects is <strong>vectors</strong>, which can be transformed as needed. </p>
+<p>Objects in programming can be broadly classified into two categories: mutable and immutable. <span style="color: rgb(62, 121, 180);"><strong>Mutable objects</strong></span> are designed to be flexible, allowing their constituting elements to be modified, appended, or removed at will. A prime example of mutable objects is <strong>vectors</strong>, which can be transformed as needed. </p>
 <p>In contrast, <span style="color: rgb(62, 121, 180);"><strong>immutable objects</strong></span> are inherently unchangeable, prohibiting any additions, removals, or modifications to their elements. This immutability effectively locks variables into a read-only state, ensuring code safety by providing a safeguard against unintended changes. An additional benefit of mutability is that it can potentially lead to performance gains. Common examples of immutable objects include <strong>tuples</strong>, which remain unchanged once created. </p>
 <p>The section is relatively brief, and only aims to highlight the differences between mutable and immutable objects. The upcoming sections will expand on their use and properties.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
@@ -2696,7 +2696,7 @@ pop&#33;&#40;x&#41;                 # error, just like push&#33;&#40;x, &lt;some
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 10, 2024 
+          © Martin Alfaro <br>Last Modified September 11, 2024 
       </span> 
   </div> 
 </footer>
