--- a/PAGES/6d_application01/index.html
+++ b/PAGES/6d_application01/index.html
@@ -480,7 +480,7 @@ section a:hover{
                 <h2> LINKS TO SECTIONS </h2>
             </div>
                 <div class="modal-body">
-                    To quickly share a link that goes to a specific section, hover over the title and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
+                    To quickly share a link to a specific section, simply hover over the title and click on it. The link will be automatically copied to your clipboard, ready to be pasted.
                 <span class="brmine"></span>
             </div>
             <div class="modal-header">
@@ -3008,7 +3008,7 @@ stats_visits     &#61; NamedTuple&#40;vector_of_tuples&#41;</code></pre> </div> 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified September 10, 2024 
+          © Martin Alfaro <br>Last Modified September 11, 2024 
       </span> 
   </div> 
 </footer>
