--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ section a:hover{
                 <h2> LINKS TO SECTIONS </h2>
             </div>
                 <div class="modal-body">
-                    To quickly share a link that goes to a specific section, hover over the title and click on it. The relevant link will be automatically copied to your clipboard, which you can then paste.
+                    To quickly share a link to a specific section, simply hover over the title and click on it. The link will be automatically copied to your clipboard, ready to be pasted.
                 <span class="brmine"></span>
             </div>
             <div class="modal-header">
@@ -2262,7 +2262,7 @@ color: white;
       <span class="ctrl-text">( <kbd>Ctrl + 🠚</kbd> )</span>
       <img src="/julia_book/assets/icons/next-page.png"
       style="width:50px; height:auto;opacity:0.9;padding-bottom:5px;"></a>    </span>              
-  <span class="center-text">  © Martin Alfaro <br>Last Modified September 10, 2024 </span>  
+  <span class="center-text">  © Martin Alfaro <br>Last Modified September 11, 2024 </span>  
 </div>
 <!-- </p>  -->
 </footer>
