--- a/PAGES/4c_forLoops/index.html
+++ b/PAGES/4c_forLoops/index.html
@@ -2595,8 +2595,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>A key feature of programming is its ability to automate repetitive tasks. One way to implement this is via <span style="color: rgb(62, 121, 180);"><strong>for-loops</strong></span>. They allow you to execute the same code block, using each element of a list as a different input.</p>
-<p>The syntax of for-loops requires the keyword <code>for</code> at the beginning and the keyword <code>end</code> at the end. To illustrate this, let&#39;s consider the function <code>println&#40;a&#41;</code>, which evaluates <code>a</code> and displays its output in the REPL. In case <code>a</code> is a string, <code>println&#40;a&#41;</code> will simply display the word stored in <code>a</code>. The following script repeatedly applies <code>println</code> to display each word in a list. </p>
+<p>A key feature of programming is its ability to automate repetitive tasks. One way to implement this is via <span style="color: rgb(62, 121, 180);"><strong>for-loops</strong></span>. They allow you to execute the same block of code, treating each element of a list as a different input.</p>
+<p>For-loops are delimited with the keywords <code>for</code> and <code>end</code>. To illustrate their syntax, let&#39;s consider the function <code>println&#40;a&#41;</code>, which evaluates <code>a</code> and displays its output in the REPL. In case <code>a</code> is a string, <code>println&#40;a&#41;</code> will simply display the word stored in <code>a</code>. The following script demonstrates how to use a for-loop, where we repeatedly apply <code>println</code> to display each word in a list. </p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">for x in &#91;&quot;hello&quot;,&quot;beautiful&quot;,&quot;world&quot;&#93;
     println&#40;x&#41;
@@ -2671,10 +2671,10 @@ end</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Iterating over Indices</h2></p>
-<p>So far, we&#39;ve considered a simple list like <code>&#91;&quot;hello&quot;, &quot;beautiful&quot;, &quot;world&quot;&#93;</code> to illustrate how for-loops work. In real applications, nonetheless, manually specifying each element in a list quickly becomes impractical. Fortunately, this isn&#39;t necessary if the list follows a predictable pattern, such as when we handle a sequence of numbers. In such cases, it&#39;s more efficient to directly describe the pattern that generates it.</p>
-<p>Next, we&#39;ll explore how to define ranges, which follow this approach by specifying a sequence of numbers.  The technique not only allows us to iterate over numerical sequences, but also access specific elements of a collection.</p>
+<p>So far, we&#39;ve considered a simple list like <code>&#91;&quot;hello&quot;, &quot;beautiful&quot;, &quot;world&quot;&#93;</code> to illustrate how for-loops work. In real applications, nonetheless, manually specifying each element in a list quickly becomes impractical. Fortunately, we can streamline the process when the list follows a predictable pattern, such as a sequence of numbers: instead of listing each element individually, we can directly describe the pattern that generates the list.</p>
+<p>Building on this insight, we&#39;ll explore how to define ranges, which embody this approach by specifying a sequence of numbers. The technique not only allows us to iterate over numerical sequences, but also provides the possibility of accessing specific elements within a collection.</p>
  <h4> Ranges </h4>
-<p><span style="color: rgb(62, 121, 180);"><strong>Ranges</strong></span> in Julia are defined through the syntax <code>&lt;begin&gt;:&lt;steps&gt;:&lt;end&gt;</code>, where <code>&lt;begin&gt;</code> is the starting index and <code>&lt;end&gt;</code> is the ending index. For its part, <code>&lt;steps&gt;</code> determines the increment between values, with a default increment of one if the term is omitted. It&#39;s also possible to reverse the order of the range, achieved by specifying a negative value for <code>&lt;steps&gt;</code>. All this is demonstrated below.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Ranges</strong></span> in Julia are defined through the syntax <code>&lt;begin&gt;:&lt;steps&gt;:&lt;end&gt;</code>, where <code>&lt;begin&gt;</code> is the starting index and <code>&lt;end&gt;</code> is the ending index. Likewise, <code>&lt;steps&gt;</code> determines the increment between values, with a default increment of one if the term is omitted. By specifying a negative value for <code>&lt;steps&gt;</code>, you can also reverse the order of the range. All this is demonstrated below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2700,10 +2700,9 @@ end</code></pre>
 1</div></div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Ranges in Julia aren&#39;t limited to use in for-loops. They can also be used to create vectors of sequential values by applying the collect function.</p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     Ranges in Julia aren&#39;t limited to use in for-loops. For instance, when combined with the function <code>collect</code>, ranges can define vectors comprising sequential values. </p>
+      <b> Remark</b> </span>  </div>  <div class=content>     Ranges in Julia aren&#39;t limited to for-loops. For instance, they can define vectors comprising sequential values when combined with the function <code>collect</code>. </p>
 <p> <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; collect&#40;4:6&#41;</code></pre>
 <p></div> </div><div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x</code><br/><div class="akin_to_pre">3-element Vector{Int64}:
@@ -2711,8 +2710,8 @@ end</code></pre>
  5
  6</div> </div></div> </div>   </details></div>  </div>  </div>
  <h4> Iterating over Indices of an Array </h4>
-<p>Ranges can be used directly in for-loops to iterate over a numerical sequence. However, they can also be used to access elements of a collection, allowing the for-loop to apply to each element of a vector.</p>
-<p>In particular, it&#39;s possible to iterate over all indices of a vector <code>x</code>. This can be achieved by using <code>1:length&#40;x&#41;</code>, where <code>length&#40;x&#41;</code> returns the number of elements in <code>x</code>. Alternatively, Julia provides the built-in function <code>eachindex&#40;x&#41;</code>. This is the recommended method for iterating over all elements, as it returns an iterator optimized for each type of array.</p>
+<p>Ranges can additionally be used to access elements of a collection. In combination with a for-loop, this enables us to apply the same block of code to each element of a vector.</p>
+<p>In particular, it&#39;s possible to iterate over all indices of a vector <code>x</code> through the expression <code>1:length&#40;x&#41;</code>, where <code>length&#40;x&#41;</code> returns the number of elements in <code>x</code>. The same functionality can be achieved by the function <code>eachindex&#40;x&#41;</code>. In fact, this is the recommended method for iterating over all elements, as it returns an iterator optimized for each type of array.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2745,7 +2744,7 @@ end</code></pre>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
       <b> Remark</b> </span>  </div>  <div class=content>     There are other approaches to iterating over all indices of a vector <code>x</code>. For instance, you can use <code>LinearIndices&#40;x&#41;</code>, or <code>firstindex&#40;x&#41;:lastindex&#40;x&#41;</code> to specify a range from the first to the last index of <code>x</code>.</p>
-<p>The multiplicity of methods partly arises to handle non-standard indices, such as those provided by the <code>OffsetArrays.jl</code> package. This package sets Julia&#39;s arrays to have 0 as the first index, a convention commonly found in many other languages. Nevertheless, unless you&#39;re creating a package for third-party use, you don&#39;t have to worry about which approach to use. Indeed, they can all be used interchangeably, as shown in the examples below.</p>
+<p>This multiplicity of methods is necessary to handle non-standard indices, such as those provided by the <code>OffsetArrays.jl</code> package. This sets Julia&#39;s arrays to have 0 as the first index, a convention commonly found in many other languages. Nevertheless, unless you&#39;re creating a package for third-party use, you don&#39;t have to worry about which approach to implement. Indeed, they can all be used interchangeably, as shown in the examples below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2799,7 +2798,7 @@ end</code></pre>
 8</div></div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Among all the alternatives, I recommend sticking to <code>eachindex</code>. This automatically selects the most efficient method for each type of collection. Additionally, it employs the same syntax regardless of the indexing approach.  </div>  </div>
+<p>Among all the alternatives, I recommend sticking to <code>eachindex</code>. This automatically selects the most efficient method for each type of collection. Additionally, it employs the same syntax, regardless of the indexing approach.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -3040,7 +3039,7 @@ y &#61; &#91;index * value for &#40;index,value&#41; in enumerate&#40;x&#41;&#93
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Iterating over Functions</h2><a id="iterate_functions" class="anchor"></a></p>
-<p>Functions in Julia are <span style="color: rgb(62, 121, 180);"><strong>first-class objects</strong></span>. This means that they can be manipulated in a similar manner to other fundamental data types, such as strings and numbers. This feature allows us to define a vector of functions, to eventually apply each to an object. In the following example, we illustrate this use to provide descriptive statics of a vector <code>x</code>.</p>
+<p>Functions in Julia are <span style="color: rgb(62, 121, 180);"><strong>first-class objects</strong></span>. This means that they can be manipulated just like other fundamental data types, such as strings and numbers. In particular, it allows us to define a vector of functions and apply each to an object. The following example illustrates this capability, by using a vector of functions to compute descriptive statistics for a vector <code>x</code>.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">using Statistics    # loaded to access the function &#96;mean&#96; and &#96;median&#96;
 
