--- a/PAGES/5c_initializing/index.html
+++ b/PAGES/5c_initializing/index.html
@@ -2595,8 +2595,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>We continue introducing preliminary concepts for mutations. The previous section distinguished between the use of <code>&#61;</code> for assignments and mutations. Now, we&#39;ll deal with approaches to creating vectors.</p>
-<p>Our presentation starts by outlining the process of initializing vectors, which involves reserving memory without assigning initial values. We&#39;ll then discuss how to create vectors with predefined values, such as zeros or ones. We conclude showing how to concatenate multiple vectors into a new one.</p>
+<p>We continue introducing preliminary concepts for mutations. The previous section distinguished between <code>&#61;</code> for assignments and mutations. Now, we&#39;ll deal with approaches to creating vectors.</p>
+<p>Our presentation starts by outlining the process of initializing vectors, where memory is reserved without assigning initial values. We&#39;ll then discuss how to create vectors with predefined values, such as zeros or ones. We conclude showing how to concatenate multiple vectors into a new one.</p>
 <p>      </div>
     </div>
   </div>
@@ -2632,7 +2632,7 @@ x &#61; similar&#40;y&#41;                      # &#96;x&#96; has the same type 
  2497355825296</code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>The example starkly shows that <code>undef</code> values don&#39;t follow any particular logic. Moreover, these values vary in each execution, as they capture any content held in RAM at the moment of allocation. In fact, a more descriptive way to call <code>undef</code> values would be through its alternative <strong>uninitialized values</strong>.</p>
+<p>The example starkly shows that <code>undef</code> values don&#39;t follow any particular logic. Moreover, these values vary in each execution, as they capture any content held in RAM at the moment of allocation. In fact, a more descriptive way to call <code>undef</code> values would be <strong>uninitialized values</strong>.</p>
 <p>      </div>
     </div>
   </div>
