--- a/PAGES/5b_mutation/index.html
+++ b/PAGES/5b_mutation/index.html
@@ -2595,16 +2595,16 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Introduction</h2></p>
-<p>The upcoming sections will be devoted to the concept of <strong>vector mutation</strong>. However, to properly cover this subject, we first need to introduce some preliminary concepts. They include:</p>
+<p>The upcoming sections will be devoted to the concept of <strong>vector mutation</strong>. To properly cover this subject, we first need to introduce some preliminary concepts, including:</p>
 <ul>
-<li><p>understanding the distinction between assignments and mutations</p>
+<li><p>the distinction between assignments and mutations</p>
 </li>
-<li><p>approaches to initializing arrays to eventually mutate them</p>
+<li><p>methods for initializing arrays to eventually mutate them</p>
 </li>
-<li><p>approaches to vector indexing for the selection of elements</p>
+<li><p>techniques for vector indexing to select elements</p>
 </li>
 </ul>
-<p>The current section in particular seeks to <strong>distinguish between assignments and mutations of variables</strong>. The difference between these concepts can easily go unnoticed by new users, as both operations use the operator <code>&#61;</code> despite being fundamentally different. Understanding the distinction is relevant not only for Julia, but also for other programming languages &#40;e.g., Python&#41;.</p>
+<p>The current section in particular <strong>distinguishes between assignments and mutations of variables</strong>. The difference between them can easily go unnoticed by new users, as both operations use the operator <code>&#61;</code> despite being fundamentally different. Clearly delineating these concepts is important not only in Julia, but also in other programming languages such as Python.</p>
 <p>      </div>
     </div>
   </div>
@@ -2614,7 +2614,7 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Some Background</h2></p>
-<p>Recall that a <strong>variable</strong> is a label for an <strong>object</strong>, where the object in turn holds a <strong>value</strong>. Moreover, objects vary according to the number of <strong>elements</strong> stored, encompassing both single-element objects &#40;e.g., integers, floating points&#41; and collections &#40;e.g., vectors&#41;.</p>
+<p>Recall that a <strong>variable</strong> serves as a label for an <strong>object</strong>, which in turn holds a <strong>value</strong>. Additionally, objects can vary in the number of <strong>elements</strong> contained, ranging from single-element objects &#40;e.g. integers and floating-point numbers&#41; to collections &#40;e.g. vectors&#41;.</p>
  <div class="multiple_pics">
 <div class="row">
   <div class="column2">
@@ -2627,7 +2627,7 @@ color: white;
   </div>  
 </div>
 </div>
-<p>The distinction between an object and its elements is crucial for the rest of the section, as  <em>assignments are operations related to objects</em>, whereas  <em>mutations are related to elements</em>. More specifically, we&#39;ll see that assignments rebind variables to new objects, while mutations modify the elements of an existing object.</p>
+<p>The distinction between objects and their elements is crucial for the remainder of the section. This is because  <em>assignments are operations related to objects</em>, whereas  <em>mutations are related to elements</em>. More specifically, assignments rebind variables to new objects, while mutations simply modify existing elements.</p>
 <p>      </div>
     </div>
   </div>
@@ -2637,8 +2637,8 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Assignments</h2></p>
-<p><span style="color: rgb(62, 121, 180);"><strong>Assignments</strong></span> bind a variable to an object, and their implementation relies on the operator <code>&#61;</code>. Specifically, they&#39;re performed through statements like <code>x &#61; 3</code> or <code>x &#61; &#91;1,2,3&#93;</code>, where <code>3</code> and <code>&#91;1,2,3&#93;</code> represent the objects to be assigned.</p>
-<p>Grasping the concept of assignments becomes simpler if we <strong>understand an object as a memory address</strong>. From this perspective, a statement like <code>x &#61; &#91;1,2,3&#93;</code> can be viewed as a two-step process:  <em>i</em>&#41; identifying a memory location to hold the object with value <code>&#91;1,2,3&#93;</code>, and  <em>ii</em>&#41; assigning a label <code>x</code> to the memory location for easy access to it.</p>
+<p><span style="color: rgb(62, 121, 180);"><strong>Assignments</strong></span> associate a variable with an object. Their implementation relies on the operator <code>&#61;</code>, as in statements like <code>x &#61; 3</code> or <code>x &#61; &#91;1,2,3&#93;</code>. In these examples, <code>3</code> and <code>&#91;1,2,3&#93;</code> represent the objects being assigned.</p>
+<p>The concept of assignments becomes clearer when we <strong>consider an object as a memory address</strong>. From this perspective, a statement like <code>x &#61; &#91;1,2,3&#93;</code> can be viewed as a two-step process:  <em>i</em>&#41; identifying a memory location to store the object with value <code>&#91;1,2,3&#93;</code>, and  <em>ii</em>&#41; labelling that memory location <code>x</code> for convenient access.</p>
 <p>      </div>
     </div>
   </div>
@@ -2648,9 +2648,9 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Mutations</h2></p>
-<p>As we&#39;ve indicated, assignments associate the name <code>x</code> to an object. The operation works identically, regardless of whether the object is a number or a vector. However, <strong>vectors open up the possibility of modifying an object's elements, without necessarily creating a new object</strong>. <span class="footn supr">&#91;note&#93;  <span class="footn_text"> Making such a distinction for numbers is unimportant for our purposes. Executing <code>x&#61;2</code> and then <code>x&#61;3</code> would ultimately entail a similar use of the operation <code>&#61;</code>. We&#39;ll revisit this matter when we cover the more general concepts of mutable and immutable objects in the next section.  </span></span> </p>
-<p>This leads us to distinguish between the use of <code>&#61;</code> for <span style="color: rgb(62, 121, 180);"><strong>assignments</strong></span> &#40;e.g., statements like <code>x &#61; &#91;4,5,6&#93;</code>&#41; and for <span style="color: rgb(62, 121, 180);"><strong>mutations</strong></span> &#40;e.g., statements like <code>x&#91;1&#93; &#61; 0</code>&#41;. Each operations is fundamentally different, despite both using the operator <code>&#61;</code>. An assignment changes the object that <code>x</code> is bound to, meaning that it points to a new memory address. On the contrary, a mutation modifies the contents of the object, without changing its memory address.</p>
-<p>As an example, suppose that we run <code>x &#61; &#91;4,5&#93;</code>. This creates an object with value <code>&#91;4,5&#93;</code> and stores it in some particular memory location. If we subsequently run <code>x &#61; &#91;6,7&#93;</code>, <code>x</code> will be associated with a new object holding <code>&#91;5,6&#93;</code>. This operation constitutes an  <em>assignment</em>. Conversely, if we execute <code>x&#91;1&#93; &#61; 0</code>, the operation modifies the object <code>&#91;4,5&#93;</code> and transforms it into <code>&#91;0,5&#93;</code>. The object will still be pointing to the same memory address, and so this case describes a  <em>mutation</em>.</p>
+<p>Assignments associate the name <code>x</code> to an object, regardless of whether the object is a number or a vector. However, <strong>vectors add the possibility of modifying an object's elements, without creating a new object</strong>.</p>
+<p>The distinction leads us to two applications of <code>&#61;</code>: as <span style="color: rgb(62, 121, 180);"><strong>assignments</strong></span> &#40;e.g., statements like <code>x &#61; &#91;4,5,6&#93;</code>&#41; and as <span style="color: rgb(62, 121, 180);"><strong>mutations</strong></span> &#40;e.g., statements like <code>x&#91;1&#93; &#61; 0</code>&#41;. Despite sharing the same operator <code>&#61;</code>, these operations are fundamentally different. Specifically, an assignment changes the object that <code>x</code> is bound to, so that it points to a new memory address. On the contrary, a mutation modifies the contents of the object, but without changing its memory address.</p>
+<p>As an example, suppose we run the command <code>x &#61; &#91;4,5&#93;</code>. This creates an object with value <code>&#91;4,5&#93;</code>, which is then stored in some particular memory location. If we subsequently run <code>x &#61; &#91;6,7&#93;</code>, <code>x</code> will be associated with a new object holding <code>&#91;5,6&#93;</code>, thus constituting an  <em>assignment</em>. Conversely, if we execute <code>x&#91;1&#93; &#61; 0</code>, the operation modifies the object <code>&#91;4,5&#93;</code> and transforms it into <code>&#91;0,5&#93;</code>. However, the object will still be pointing to the same memory address, thereby constituting a  <em>mutation</em>.</p>
 <br/>
 <p> <div class="multiple_pics">
 <div class="row">
@@ -2666,7 +2666,7 @@ color: white;
 </div> <br/></p>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     You can mutate all the elements of <code>x</code> by referring to <code>x&#91;:&#93;</code>, without this entailing a new assignment. In other words, modifying the values of <code>x&#91;:&#93;</code>  does not change the object that <code>x</code> points to.</p>
+      <b> Remark</b> </span>  </div>  <div class=content>     You can mutate all the elements of <code>x</code> by referring to <code>x&#91;:&#93;</code>. Importantly, this doesn&#39;t entail a new assignment. In other words, modifying the values of <code>x&#91;:&#93;</code> does not change the object that <code>x</code> points to.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;4,5&#93;
 
@@ -2674,7 +2674,7 @@ x&#91;:&#93; &#61;  &#91;0,0&#93;</code></pre>
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x</code><br/><div class="akin_to_pre">2-element Vector{Int64}:
  0
  0</div> </div></div> </div>   </details></div>
-<p>This becomes important when we study speeding up operations, as usually mutating elements is faster than creating new objects.  </div>  </div>
+<p>This becomes important when we study approaches to speeding up operations, as mutations tend to be faster than creation of new objects.  </div>  </div>
 <p>      </div>
     </div>
   </div>
@@ -2684,8 +2684,8 @@ x&#91;:&#93; &#61;  &#91;0,0&#93;</code></pre>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Alias vs Copy</h2></p>
-<p>A statement like <code>y &#61; x</code> in Julia is interpreted as <code>y</code> pointing to the same object pointed by <code>x</code>. The operation determines that <code>y</code> constitutes an <span style="color: rgb(62, 121, 180);"><strong>alias</strong></span> of <code>x</code>, so that there are two different labels for the same object. Note that <code>y &#61; x</code> should  <em>not</em> be interpreted as <code>y</code> being a label for <code>x</code>. This semantic distinction is subtle, but has deep implications at a practical level. It implies that reassignments of <code>x</code> do not affect <code>y</code>.</p>
-<p>To illustrate this, suppose we execute <code>x &#61; 2</code> and then <code>y &#61; x</code>. This means that both <code>x</code> and <code>y</code> are pointing to the same object holding <code>2</code>. If we now execute <code>x &#61; 4</code>, <code>x</code> would point to a new object holding the value <code>4</code>, without changing what&#39;s stored in the original object of <code>x</code>. Consequently, <code>y</code> will keep holding the value <code>2</code>, as <code>y</code> still points to the same object. This is demonstrated below.</p>
+<p>In Julia, the statement <code>y &#61; x</code> means that <code>y</code> is an alias for the object referenced by <code>x</code>. This means both <code>y</code> and <code>x</code> serve as different labels for the same underlying object. Formally, it&#39;s said that <code>y</code> constitutes an <span style="color: rgb(62, 121, 180);"><strong>alias</strong></span> of <code>x</code>. Importantly, <code>y &#61; x</code> should  <em>not</em> be interpreted as <code>y</code> being a label for <code>x</code>. This subtle distinction carries a significant practical implication: reassignments of <code>x</code> do not affect <code>y</code>.</p>
+<p>To illustrate this, suppose we execute <code>x &#61; 2</code> and then <code>y &#61; x</code>. This makes both <code>x</code> and <code>y</code> point to the same object holding <code>2</code>. If we then execute <code>x &#61; 4</code>, <code>x</code> would point to a new object that holds the value <code>4</code>, but without changing what&#39;s stored in the original object of <code>x</code>. Consequently, <code>y</code> will still reference the object with value <code>2</code>, as <code>y</code> is still pointing to the same object. This behavior is illustrated in the example below.</p>
 <br/>
  <div class="multiple_pics">
 <div class="row">
@@ -2719,8 +2719,8 @@ x &#61; 4   #&#39;x&#39; now points to another object &#40;but &#39;y&#39; still
 <p></div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>x</code><br/><div class="akin_to_pre">4</div> </div> <div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>y</code><br/><div class="akin_to_pre">2</div> </div></div> </div>   </details></div>
  <div class=note>  <div class=title>  <span class="note_title" style="font-weight:500;">
       <img src="/julia_book/assets/icons/exclamation.png" style="width:auto; height:30px;opacity:0.99;padding-bottom:4px; margin-left:-4px;">      
-      <b> Remark</b> </span>  </div>  <div class=content>     Notice that <strong>two variables could comprise identical elements, and yet refer to different objects</strong>. </p>
-<p>This can be formally seen by resorting to the operators <code>&#61;&#61;</code> and <code>&#61;&#61;&#61;</code>, which assess two types of equality. As for <code>x &#61;&#61; y</code>, it evaluates whether <code>x</code> and <code>y</code> have equal values, regardless of whether they&#39;re the same object. Instead, <code>x &#61;&#61;&#61; y</code> indicates whether both <code>x</code> and <code>y</code> are pointing to the same object, interpreted as a specific memory address. By use of these operators, the following example shows that having identical elements does not imply equivalence of objects.</p>
+      <b> Remark</b> </span>  </div>  <div class=content>     Notice that <strong>two variables could comprise identical elements and yet refer to different objects</strong>. </p>
+<p>This can be formally seen through the operators <code>&#61;&#61;</code> and <code>&#61;&#61;&#61;</code>, which assess two types of equality. Specifically, <code>x &#61;&#61; y</code> evaluates whether <code>x</code> and <code>y</code> have equal values, regardless of whether they refer to the same object. In contrast, <code>x &#61;&#61;&#61; y</code> checks whether both <code>x</code> and <code>y</code> point to the same object, interpreted as a specific memory address. By applying these operators, the following example demonstrates that identical elements are not necessarily the same objects.</p>
  <div class=" code_box"> <details  open><summary> Code  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;4,5&#93;
 
@@ -2732,7 +2732,7 @@ z &#61; x</code></pre>
   <h2 style="color:rgb(63, 99,136)">Graphical Representation</h2>
     <img src="/julia_book/assets/PAGES/5b_mutation/tikz/interpret05.svg" style="width:450px ; height:auto; padding-right:0em;">  
 </div>  </div>  </div>
-<p>We&#39;ve indicated that the operation <code>y &#61; x</code> creates an alias of <code>x</code>, so that <code>y</code> and <code>x</code> are two different labels for the same object. Consequently, <strong>modifying the elements of</strong> <code>x</code> <strong>or</strong> <code>y</code> <strong>changes the elements of both</strong> <code>x</code> <strong>and</strong> <code>y</code> <strong>simultaneously</strong>. This is illustrated in the following diagram and code snippet. </p>
+<p>We&#39;ve indicated that the operation <code>y &#61; x</code> creates an alias of <code>x</code>, making <code>y</code> and <code>x</code> two different labels for the same object. As a result, <strong>modifying the elements of either</strong> <code>x</code> <strong>or</strong> <code>y</code> <strong>will necessarily change the elements of both</strong> <code>x</code> <strong>and</strong> <code>y</code> <strong>simultaneously</strong>. This is illustrated in the following diagram and code snippet. </p>
  <div class="multiple_pics">
   <h2 style="color:rgb(63, 99,136)">Graphical Representation</h2>
     <img src="/julia_book/assets/PAGES/5b_mutation/tikz/interpret06.svg" style="width:750px ; height:auto; margin-top:-1em;">  
@@ -2747,7 +2747,7 @@ x&#91;1&#93; &#61;  0</code></pre>
  5</div> </div><div class="julia_repl_NoFormat"> <div class="julia_line">julia&gt</div> <code>y</code><br/><div class="akin_to_pre">2-element Vector{Int64}:
  0
  5</div> </div></div> </div>   </details></div>
-<p>If you want <code>x</code> and <code>y</code> to be considered as separate objects, you should use the function <code>copy</code> instead. This function creates a new object that contains the same elements as the original object.</p>
+<p>If you&#39;d like <code>x</code> and <code>y</code> to be treated as separate objects, you must use the function <code>copy</code>. This function generates a new object that contains the same elements as the original, ensuring that  modifications to the new object don&#39;t affect the original.</p>
  <div class=" code_box"> <details  open><summary> Variable <code>y</code> as a Copy  </summary> <div class="code_inline"><div class="code_NoFormat"></p>
 <pre><code class="language-julia">x &#61; &#91;4,5&#93;
 y &#61; copy&#40;x&#41;
